logs/offboard_pkg/build.make.136.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:22:65: error: too few arguments to function ‘void Init_LocalWayPoints(XmlRpc::XmlRpcValue&, std::vector<geometry_msgs::PoseStamped_<std::allocator<void> > >&, int, int)’
   22 |         Init_LocalWayPoints(waypoint_list, LocalWayPoints_matrix);
      |                                                                 ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:3:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/multi.cpp:16:6: note: declared here
   16 | void Init_LocalWayPoints(XmlRpc::XmlRpcValue &waypoint, std::vector<geometry_msgs::PoseStamped> &LocalWayPoints_matrix, int nVehicle, int nWayPoints)
      |      ^~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
